assets/css/style.css
/* ... */
.milstones-list {
  display: grid;
  grid-template-columns: 1fr;
  gap: 20px;
}

.milstones-item {
  position: relative;
  background: #282e36;

  padding: 20px;
  border-radius: 14px;
  z-index: 1;
}

.milstones-item::before {
  content: '';
  position: absolute;
  inset: 1px;
  background: #282e36;
  border-radius: inherit;
  z-index: -1;
}

.milstones-icon-box {
  margin-bottom: 10px;
}

.milstones-icon-box img {
  margin: auto;
}

.milstones-content-box {
  text-align: center;
}

.milstones-item-title {
  margin-bottom: 7px;
}

.milstones-item-text {
  color: var(--light-gray);
  font-size: var(--fs-6);
  font-weight: var(--fw-3);
  line-height: 1.6;
}

/*-----------------------------------*\
  #CORE TEAM
\*-----------------------------------*/

.coreteam .section-title {
  margin-block-end: 30px;
}

.team-list {
  display: grid;
  grid-template-columns: 1fr;
  gap: 30px;
}

/* .team-list li {
  max-width: 10%;
} */

.team-member {
  border-radius: var(--radius-circle);
  width: 200px;
  height: 200px;
  transition: var(--transition-3);
  box-shadow: 0px 4px 4px 2px #e961ff;
  margin: auto;
}

.team-member img {
  width: 200px;
  height: 200px;
  border-radius: var(--radius-circle);
  object-fit: cover;
}

.team-name {
  font-size: var(--fs-4);
  font-weight: var(--fw-400);
  font-family: var(--ff-kanit);
  color: var(--white);
  padding-top: 2.5rem;
  line-height: 1;
}
.team-text {
  font-family: var(--ff-electrolize);
  color: var(--white);
  font-size: var(--fs-4);
}

/*-----------------------------------*\
  #BRAND
\*-----------------------------------*/

.brand {
  --section-padding: 60px;
}

.brand .section-title {
  margin-block: 30px;
}

.has-scrollbar {
  display: flex;
  gap: 30px;
  overflow-x: auto;
  padding-block-end: 30px;
  justify-content: center;
  scroll-snap-type: inline mandatory;
}

.brand .has-scrollbar {
  padding-block-end: 0;
}

.has-scrollbar::-webkit-scrollbar {
  width: 5px; /* for vertical scrollbar */
  height: 5px; /* for horizontal scrollbar */
}

.has-scrollbar::-webkit-scrollbar-thumb {
  background: rgb(63, 53, 53);
  border-radius: 5px;
}
.has-scrollbar::-webkit-scrollbar-button {
  width: 50px;
}
.brand-item {
  min-width: 50%;
  scroll-snap-align: start;
}

.brand-item img {
  width: 100%;
  transition: var(--transition-1);
}

.brand-item > img {
  margin-inline: auto;
}

/*-----------------------------------*\
  #MENU
\*-----------------------------------*/

.menu {
  background-attachment: fixed;
}

.menu .section-title {
  margin-block-end: 50px;
}

.menu .grid-list {
  background-color: var(--rich-black-fogra-39);
  padding: 20px;
  gap: 40px;
  background-repeat: no-repeat;
  background-size: 500px;
  background-position: center;
}

.menu-card .card-banner {
  width: 160px;
  border-radius: var(--radius-5);
  margin-block-end: 15px;
}

.menu-card .card-content {
  display: grid;
}

.menu-card .card-text {
  margin-block: 10px;
}

.menu-card .card-price {
  color: var(--camel);
  font-family: var(--ff-merienda);
  font-size: var(--fs-4);
  text-align: right;
}

.menu-card .card-price::before {
  top: 50%;
  left: 0;
  width: calc(100% - 60px);
  border-block-end: 3px dotted var(--camel);
}

/*-----------------------------------*\
  #FOOTER
\*-----------------------------------*/

.footer {
  background-image: var(--gradient);
  padding-block: 30px;
}
.footer .container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.footer .logo {
  padding-block: 15px;
  width: 200px;
  height: 80px;
}

.copyright {
  text-align: center;
  font-size: var(--fs-5);
  padding-bottom: 15px;
}

.footer-list {
  /* display: grid; */
  grid-template-columns: 1fr;
  /* gap: 20px; */
}

.footer-item {
  display: flex;
  align-items: center;
  gap: 18px;
  padding: 5px;
  margin: auto;
}

.footer-icon-box {
  color: var(--white);
  font-size: var(--fs-4);
}

.footer-icon-box img {
  margin: auto;
}

.footer-content-box {
  text-align: center;
}

.footer-item-text {
  color: var(--white);
  font-size: var(--fs-4);
  font-weight: var(--fw-3);
  line-height: 1.6;
}

